# sactor

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  justfile  library.json  library.properties
demos/actor_pool/: README.md
demos/actor_pool/src/: actor_contacts.h
demos/blinky_hello/: README.md
demos/blinky_hello/src/: actor_contacts.h
demos/timer/: README.md
demos/timer/src/: CMakeLists.txt
examples/Arduino_BlinkyHello/: Arduino_BlinkyHello.ino
examples/actor-pool/: CMakeLists.txt  platformio.ini
examples/actor-pool/src/: actors.h  main.cpp
examples/actor_pool/: README.md
examples/actor_pool/src/: actor_contacts.h  actors.cpp  actors.h  (+1 more)
examples/arduino_blinky_hello/: CMakeLists.txt  README.md  actor_contacts.h  actors.cpp  actors.h  arduino_blinky_hello.ino  common.h  platformio.ini
examples/blinky-hello/: CMakeLists.txt  platformio.ini
examples/blinky_hello/: README.md  platformio.ini
examples/delayed_message/: README.md  platformio.ini
examples/timer/: CMakeLists.txt  README.md
sactor/: actor.cpp  actor.h  actor_mailbox.cpp  actor_mailbox.h  actor_worker_thread.cpp  actor_worker_thread.h  common.h  config.h  debug.h  delay_message_service.cpp  delay_message_service.h  messaging.h  sactor.h  static_message_queue.cpp  static_message_queue.h
src/: rename.ps1  sactor.h
src/sactor/: actor.cpp  actor.h  actor_mailbox.cpp  actor_mailbox.h  actor_worker_thread.cpp  actor_worker_thread.h  common.h  config.h  debug.h  delay_message_service.cpp  delay_message_service.h  messaging.h  static_message_queue.cpp  static_message_queue.h
(+15 files in other folders)
